fixed gap

--- a/HW06-07/style.css
+++ b/HW06-07/style.css
@@ -227,6 +227,9 @@ a {
         padding-left: calc(50% - 367px);
         padding-right: calc(50% - 367px);
     }
+    .header-content {
+        gap: 39px;
+    }
 
     .title {
         font-size: 24px;
